--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commerce-apps/core",
-  "version": "0.0.12-alpha.0",
+  "version": "0.0.12-alpha.1",
   "description": "Commerce SDK Generator, contains the templates to generate the SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,9 @@
     "build": "tsc",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -83,7 +85,7 @@
     }
   },
   "devDependencies": {
-    "@commerce-apps/exchange-connector": "^1.0.9-alpha.0",
+    "@commerce-apps/exchange-connector": "^1.0.9-alpha.1",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "mocha": "^6.2.2",
