--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@commerce-apps/commerce-sdk",
-  "version": "0.0.13-alpha.0",
+  "version": "0.0.13-alpha.1",
   "description": "Commerce Cloud SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "pretest": "npm run lint",
     "test:debug": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
@@ -98,7 +100,7 @@
     "unzipper": "^0.10.5"
   },
   "dependencies": {
-    "@commerce-apps/core": "^0.0.12-alpha.0",
-    "@commerce-apps/exchange-connector": "^1.0.9-alpha.0"
+    "@commerce-apps/core": "^0.0.12-alpha.1",
+    "@commerce-apps/exchange-connector": "^1.0.9-alpha.1"
   }
 }
