--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -96,6 +96,7 @@
     "apollo-boost": "^0.4.4",
     "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
+    "fs-extra": "^8.1.0",
     "graphql-tag": "^2.10.1",
     "unzipper": "^0.10.5"
   },
