--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -96,6 +96,7 @@
   "license": "ISC",
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "dependencies": {
+    "make-fetch-happen": "^7.1.0",
     "simple-oauth2": "^3.1.0",
     "tmp": "~0.1.0"
   }
