Added tslib to dependencies

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -101,6 +101,7 @@
   },
   "dependencies": {
     "@commerce-apps/core": "^0.0.12-alpha.3",
-    "@commerce-apps/exchange-connector": "^1.0.9-alpha.2"
+    "@commerce-apps/exchange-connector": "^1.0.9-alpha.2",
+    "tslib": "^1.10.0"
   }
 }
