--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -87,7 +87,6 @@
   "devDependencies": {
     "@commerce-apps/exchange-connector": "^1.0.9-alpha.2",
     "cross-env": "^6.0.3",
-    "dotenv": "^8.2.0",
     "mocha": "^6.2.2",
     "nock": "^11.7.0",
     "nyc": "^14.1.1"
@@ -98,6 +97,7 @@
   "dependencies": {
     "make-fetch-happen": "^7.1.0",
     "simple-oauth2": "^3.1.0",
-    "tmp": "~0.1.0"
+    "tmp": "~0.1.0",
+    "dotenv": "^8.2.0"
   }
 }
