--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commerce-apps/core",
-  "version": "0.0.12-alpha.3",
+  "version": "0.0.12-alpha.4",
   "description": "Commerce SDK Generator, contains the templates to generate the SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -95,9 +95,9 @@
   "license": "ISC",
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "make-fetch-happen": "^7.1.0",
     "simple-oauth2": "^3.1.0",
-    "tmp": "~0.1.0",
-    "dotenv": "^8.2.0"
+    "tmp": "~0.1.0"
   }
 }
