Added node-fetch to dependencies

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -98,6 +98,7 @@
     "dotenv": "^8.2.0",
     "fs-extra": "^8.1.0",
     "graphql-tag": "^2.10.1",
+    "node-fetch": "^2.6.0",
     "unzipper": "^0.10.5"
   },
   "devDependencies": {
