--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,4 +33,17 @@ jobs:
       - run: npm run publish
 orbs:
   node: circleci/node@1.1
-version: 2.0
+version: 2.1
+
+workflows:
+  version: 2
+  build-and-publish:
+    jobs:
+      - build
+      - npm_publish:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - publish
