Replace publish with master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,6 @@ jobs:
       - run: npm run build
       - run: npm run test
       - run: npm run test:integration
-      - run: npm run publish
 orbs:
   node: circleci/node@1.1
 version: 2.1
@@ -46,4 +45,4 @@ workflows:
           filters:
             branches:
               only:
-                - publish
+                - master
