--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "postinstall": "lerna bootstrap --hoist",
     "test": "lerna run test",
     "build": "lerna run build",
-    "test:integration": "lerna run test:integration"
+    "test:integration": "lerna run test:integration",
+    "publish": "lerna publish prepatch --yes"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
