Changed back to commerce-sdk

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@commerce-apps/commerce-sdk",
+  "name": "commerce-sdk",
   "version": "0.0.13-alpha.9",
   "description": "Commerce Cloud SDK",
   "main": "dist/index.js",
