--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "commerce-sdk",
   "version": "0.0.13-alpha.10",
-  "description": "Commerce Cloud SDK",
+  "description": "Salesforce Commerce Cloud SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
