Change to master for holding the Job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ workflows:
           filters:
             branches:
               only:
-                - publish
+                - master
       - npm_publish:
           requires:
             - hold
