--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
       - run: npm run build
       - run: npm run test
       - run: npm run test:integration
+      - run: npm run publish
 orbs:
   node: circleci/node@1.1
 version: 2.1
