Test without release tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,9 @@ jobs:
       - run: npm run build
       - run: npm run test
       - run: npm run test:integration
-      - run: npm run publish
+      - run:
+          name: Publish to npm
+          command: npm run publish
 orbs:
   node: circleci/node@1.1
 version: 2.1
