--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ workflows:
             - build
           filters:
             tags:
-              only: /^npm_publish_v.*/
+              only: /^publish_v.*/
       - npm_publish:
           requires:
             - hold
