Test with only master branchg

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,10 @@ workflows:
             - build
           filters:
             tags:
-              only: /^publish_v.*/
+              only: /^npm_publish_v.*/
+            branches:
+              only:
+                - master
       - npm_publish:
           requires:
             - hold
