Test with publish and new tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ workflows:
             - build
           filters:
             tags:
-              only: /^npm_publish_v.*/
+              only: /^publish_npm_v.*/
             branches:
               only:
-                - master
+                - publish
       - npm_publish:
           requires:
             - hold
