Test without tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,6 @@ workflows:
             - build
           filters:
             tags:
-              only: /^publish_npm_v.*/
+              only: /^v.*/
             branches:
-              only:
-                - publish
+              ignore: /.*/
