Remove name from run command and add tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,9 +30,7 @@ jobs:
       - run: npm run build
       - run: npm run test
       - run: npm run test:integration
-      - run:
-          name: Publish to npm
-          command: npm run publish
+      - run: npm run publish
 orbs:
   node: circleci/node@1.1
 version: 2.1
