Added package-loack.json as it is needed for publishing (#45)
* Added package-loack.json as it is needed for publishing

* Publish

 - @commerce-sdk/core@0.0.3-alpha.0
 - @commerce-sdk/exchange-connector@1.0.2-alpha.0
 - commerce-sdk@0.0.3-alpha.0

* Too many lines

* Updated readmes

* Publish

 - @commerce-sdk/core@0.0.4-alpha.0
 - @commerce-sdk/exchange-connector@1.0.3-alpha.0
 - commerce-sdk@0.0.4-alpha.0

* Updated npm dest

* Publish

 - @commerce-sdk/core@0.0.5-alpha.0
 - @commerce-sdk/exchange-connector@1.0.4-alpha.0
 - commerce-sdk@0.0.5-alpha.0

* Make it public

* Publish

 - @commerce-sdk/core@0.0.6-alpha.0
 - @commerce-sdk/exchange-connector@1.0.4-alpha.0
 - commerce-sdk@0.0.6-alpha.0

* Wrong number of lines

* Publish

 - @commerce-sdk/core@0.0.7-alpha.0
 - @commerce-sdk/exchange-connector@1.0.5-alpha.0
 - commerce-sdk@0.0.7-alpha.0

* Update names

* Publish

 - @commerce-apps/core@0.0.8-alpha.0
 - @commerce-apps/exchange-connector@1.0.6-alpha.0
 - commerce-sdk@0.0.8-alpha.0

* Updated for name. Tomorrow will change back

* Publish

 - @commerce-apps/core@0.0.9-alpha.0
 - @commerce-apps/exchange-connector@1.0.7-alpha.0
 - @commerce-app/commerce-sdk@0.0.9-alpha.0

* comemrce-apps

* Publish

 - @commerce-apps/core@0.0.10-alpha.0
 - @commerce-apps/exchange-connector@1.0.8-alpha.0
 - @commerce-apps/commerce-sdk@0.0.10-alpha.0

* No more YALPs?

* Publish

 - @commerce-apps/core@0.0.11-alpha.0
 - @commerce-apps/exchange-connector@1.0.9-alpha.0
 - @commerce-apps/commerce-sdk@0.0.11-alpha.0

* Need exchange-connector due to mocking service?

* Publish

 - @commerce-apps/commerce-sdk@0.0.12-alpha.0

* Updated to package up needed dependencies

* Publish

 - @commerce-apps/core@0.0.12-alpha.0
 - @commerce-apps/commerce-sdk@0.0.13-alpha.0

* Fixing dependencies

* Publish

 - @commerce-apps/core@0.0.12-alpha.1
 - @commerce-apps/exchange-connector@1.0.9-alpha.1
 - @com

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@commerce-sdk/core",
-  "version": "0.0.2-alpha.0",
+  "name": "@commerce-apps/core",
+  "version": "0.0.12-alpha.9",
   "description": "Commerce SDK Generator, contains the templates to generate the SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,6 +9,12 @@
     "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/core.xml --exit --require ts-node/register --colors test/**/*.ts",
     "build": "tsc",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
+  },
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
@@ -32,9 +38,6 @@
     "functions": 80,
     "lines": 80,
     "statements": -10
-  },
-  "publishConfig": {
-    "registry": "https://nexus.soma.salesforce.com/nexus/content/repositories/npmjs-internal/"
   },
   "lint-staged": {
     "*.js": [
@@ -82,17 +85,22 @@
     }
   },
   "devDependencies": {
-    "@commerce-sdk/exchange-connector": "^1.0.1-alpha.0",
+    "@commerce-apps/exchange-connector": "^1.0.9-alpha.4",
     "cross-env": "^6.0.3",
-    "dotenv": "^8.2.0",
     "mocha": "^6.2.2",
     "nock": "^11.7.0",
     "nyc": "^14.1.1"
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063",
+  "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
+    "make-fetch-happen": "^7.1.0",
+    "node-fetch": "^2.6.0",
+    "qs": "^6.9.1",
+    "simple-oauth2": "^3.1.0",
     "tmp": "~0.1.0"
   }
 }
