--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@commerce-sdk/exchange-connector",
-  "version": "1.0.1-alpha.0",
+  "name": "@commerce-apps/exchange-connector",
+  "version": "1.0.9-alpha.4",
   "description": "Downloads raml specs from exchange",
   "author": "Jeff Albert <jalbert@salesforce.com>",
   "homepage": "",
@@ -11,7 +11,7 @@
     "dist"
   ],
   "publishConfig": {
-    "registry": "https://nexus.soma.salesforce.com/nexus/content/groups/npm-all/"
+    "access": "public"
   },
   "nyc": {
     "exclude": [
@@ -94,8 +94,11 @@
   "dependencies": {
     "@types/graphql": "^14.5.0",
     "apollo-boost": "^0.4.4",
+    "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
+    "fs-extra": "^8.1.0",
     "graphql-tag": "^2.10.1",
+    "node-fetch": "^2.6.0",
     "unzipper": "^0.10.5"
   },
   "devDependencies": {
@@ -106,5 +109,5 @@
     "nock": "^11.7.0",
     "nyc": "^14.1.1"
   },
-  "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063"
+  "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81"
 }
