--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,6 @@ workflows:
             - build
           filters:
             tags:
-              only: /^npm_publish_v.*/
+              only: /^publish_npm.*/
             branches:
               ignore: /.*/
