--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "postinstall": "lerna bootstrap --hoist",
     "test": "lerna run test",
     "build": "lerna run build",
-    "test:integration": "lerna run test:integration"
+    "test:integration": "lerna run test:integration",
+    "publish": "lerna publish prepatch --yes"
   },
   "dependencies": {
     "fs-extra": "^8.1.0",
