--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "lerna run test",
     "build": "lerna run build",
     "test:integration": "lerna run test:integration",
-    "publish": "lerna publish"
+    "publish": "lerna publish $*"
   },
   "dependencies": {
     "fs-extra": "^8.1.0",
