Test with publish

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 parameters:
   publish_sdk:
     type: boolean
-    default: false
+    default: true
   lerna_command:
     type: string
     default: "prerelease --yes"
