--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-sdk",
-  "version": "0.0.13-alpha.11",
+  "version": "0.0.13-alpha.12",
   "description": "Salesforce Commerce Cloud SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -91,12 +91,14 @@
     },
     "overrides": [
       {
-          "files": ["dist/**"],
-          "rules": {
-              "@typescript-eslint/camelcase": "warn",
-              "@typescript-eslint/ban-ts-ignore": "warn",
-              "@typescript-eslint/no-var-requires": "warn"
-          }
+        "files": [
+          "dist/**"
+        ],
+        "rules": {
+          "@typescript-eslint/camelcase": "warn",
+          "@typescript-eslint/ban-ts-ignore": "warn",
+          "@typescript-eslint/no-var-requires": "warn"
+        }
       }
     ]
   },
@@ -110,8 +112,8 @@
     "unzipper": "^0.10.5"
   },
   "dependencies": {
-    "@commerce-apps/core": "^0.0.12-alpha.9",
-    "@commerce-apps/exchange-connector": "^1.0.9-alpha.4",
+    "@commerce-apps/core": "^0.0.12-alpha.10",
+    "@commerce-apps/exchange-connector": "^1.0.9-alpha.5",
     "tslib": "^1.10.0"
   }
 }
