Test lerna publish using different names for the packages

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "commerce-sdk",
+  "name": "commerce-sdk7",
   "version": "0.0.14-alpha.0",
   "description": "Salesforce Commerce Cloud SDK",
   "main": "dist/index.js",
@@ -112,8 +112,8 @@
     "unzipper": "^0.10.5"
   },
   "dependencies": {
-    "@commerce-apps/core": "^0.0.13-alpha.0",
-    "@commerce-apps/exchange-connector": "^1.0.10-alpha.0",
+    "@testprivate/core": "^0.0.13-alpha.0",
+    "@testprivate/exchange-connector": "^1.0.10-alpha.0",
     "tslib": "^1.10.0"
   }
 }
