--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@commerce-apps/core",
+  "name": "@testprivate/core",
   "version": "0.0.13-alpha.0",
   "description": "Commerce SDK Generator, contains the templates to generate the SDK",
   "main": "dist/index.js",
@@ -85,7 +85,7 @@
     }
   },
   "devDependencies": {
-    "@commerce-apps/exchange-connector": "^1.0.10-alpha.0",
+    "@testprivate/exchange-connector": "^1.0.10-alpha.0",
     "cross-env": "^6.0.3",
     "mocha": "^6.2.2",
     "nock": "^11.7.0",
