Dummy changes to publish to private repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           steps:
             - attach_workspace:
                 at: ~/build_and_publish
-            - run: echo publishing sdk to npm
+            - run: echo start publish sdk to npm
             - run:
                 name: Create npmrc file to authenticate with npm registry.
                 command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
