Dummy changes to test lerna publish

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,7 +22,8 @@
       "coverage",
       "dist",
       "test",
-      "src/core/index.ts"
+      "src/core/index.ts",
+      "test1"
     ],
     "reporter": [
       "html",
