--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -18,7 +18,8 @@
       "coverage",
       "test",
       "dist",
-      "types"
+      "types",
+      "test1"
     ],
     "reporter": [
       "html",
