--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -28,7 +28,8 @@
       "test_integration",
       "gulpfile.ts",
       "renderedTemplates",
-      "index.js"
+      "index.js",
+      "test1"
     ],
     "reporter": [
       "html",
