Remove test excludes

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,8 +22,7 @@
       "coverage",
       "dist",
       "test",
-      "src/core/index.ts",
-      "test1"
+      "src/core/index.ts"
     ],
     "reporter": [
       "html",
