--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -18,8 +18,7 @@
       "coverage",
       "test",
       "dist",
-      "types",
-      "test1"
+      "types"
     ],
     "reporter": [
       "html",
