--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -28,8 +28,7 @@
       "test_integration",
       "gulpfile.ts",
       "renderedTemplates",
-      "index.js",
-      "test1"
+      "index.js"
     ],
     "reporter": [
       "html",
