--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "commerce-sdk",
+  "name": "commerce-sdk71",
   "private": true,
   "scripts": {
     "postinstall": "lerna bootstrap --hoist",
     "test": "lerna run test",
     "build": "lerna run build",
     "test:integration": "lerna run test:integration",
-    "publish": "lerna publish prepatch --yes"
+    "publish": "lerna publish prerelease --yes"
   },
   "dependencies": {
     "fs-extra": "^8.1.0",
