--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "commerce-sdk71",
+  "name": "commerce-sdk",
   "private": true,
   "scripts": {
     "postinstall": "lerna bootstrap --hoist",
