--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@testprivate/core",
-  "version": "0.0.13-alpha.4",
+  "name": "@commerce-apps/core",
+  "version": "0.0.12-alpha.9",
   "description": "Commerce SDK Generator, contains the templates to generate the SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,8 +22,7 @@
       "coverage",
       "dist",
       "test",
-      "src/core/index.ts",
-      "test1"
+      "src/core/index.ts"
     ],
     "reporter": [
       "html",
@@ -86,7 +85,7 @@
     }
   },
   "devDependencies": {
-    "@testprivate/exchange-connector": "^1.0.10-alpha.4",
+    "@commerce-apps/exchange-connector": "^1.0.9-alpha.4",
     "cross-env": "^6.0.3",
     "mocha": "^6.2.2",
     "nock": "^11.7.0",
