--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@testprivate/exchange-connector",
-  "version": "1.0.10-alpha.4",
+  "name": "@commerce-apps/exchange-connector",
+  "version": "1.0.9-alpha.4",
   "description": "Downloads raml specs from exchange",
   "author": "Jeff Albert <jalbert@salesforce.com>",
   "homepage": "",
@@ -18,8 +18,7 @@
       "coverage",
       "test",
       "dist",
-      "types",
-      "test1"
+      "types"
     ],
     "reporter": [
       "html",
