--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "commerce-sdk7",
-  "version": "0.0.14-alpha.4",
+  "name": "commerce-sdk",
+  "version": "0.0.13-alpha.11",
   "description": "Salesforce Commerce Cloud SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,8 +28,7 @@
       "test_integration",
       "gulpfile.ts",
       "renderedTemplates",
-      "index.js",
-      "test1"
+      "index.js"
     ],
     "reporter": [
       "html",
@@ -92,14 +91,12 @@
     },
     "overrides": [
       {
-        "files": [
-          "dist/**"
-        ],
-        "rules": {
-          "@typescript-eslint/camelcase": "warn",
-          "@typescript-eslint/ban-ts-ignore": "warn",
-          "@typescript-eslint/no-var-requires": "warn"
-        }
+          "files": ["dist/**"],
+          "rules": {
+              "@typescript-eslint/camelcase": "warn",
+              "@typescript-eslint/ban-ts-ignore": "warn",
+              "@typescript-eslint/no-var-requires": "warn"
+          }
       }
     ]
   },
@@ -113,6 +110,8 @@
     "unzipper": "^0.10.5"
   },
   "dependencies": {
+    "@commerce-apps/core": "^0.0.12-alpha.9",
+    "@commerce-apps/exchange-connector": "^1.0.9-alpha.4",
     "tslib": "^1.10.0"
   }
 }
