Updated license in package.json to match license.txt

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -92,7 +92,7 @@
     "nyc": "^14.1.1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "BSD 3-Clause",
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "dependencies": {
     "dotenv": "^8.2.0",
