--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -103,7 +103,7 @@
     ]
   },
   "author": "",
-  "license": "ISC",
+  "license": "BSD 3-Clause",
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "devDependencies": {
     "chai": "^4.2.0",
