--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -4,7 +4,7 @@
   "description": "Downloads raml specs from exchange",
   "author": "Jeff Albert <jalbert@salesforce.com>",
   "homepage": "",
-  "license": "MIT",
+  "license": "BSD 3-Clause",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
