Remove lerna commangs from npm script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "lerna run test",
     "build": "lerna run build",
     "test:integration": "lerna run test:integration",
-    "publish": "lerna publish from-package --yes"
+    "publish": "lerna "
   },
   "dependencies": {
     "fs-extra": "^8.1.0",
