--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -95,12 +95,13 @@
   "license": "BSD 3-Clause",
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "lodash": "^4.17.15",
-    "make-fetch-happen": "^7.1.0",
-    "node-fetch": "^2.6.0",
-    "qs": "^6.9.1",
-    "simple-oauth2": "^3.1.0",
+    "dotenv": "~8.2.0",
+    "jsonwebtoken": "~8.5.1",
+    "lodash": "~4.17.15",
+    "make-fetch-happen": "~7.1.0",
+    "node-fetch": "~2.6.0",
+    "qs": "~6.9.1",
+    "simple-oauth2": "~3.1.0",
     "tmp": "~0.1.0"
   }
 }
