Build step changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,3 @@
-parameters:
-  publish_sdk:
-    type: boolean
-    default: false
-  lerna_command:
-    type: string
-    default: "publish from-package -- --yes --git-head invalid"
-
 jobs:
   build:
     working_directory: ~/build_and_publish
@@ -22,7 +14,6 @@ jobs:
       - run: npm run test:integration
       - store_test_results:
           path: reports
-      - run: echo publish to npm << pipeline.parameters.publish_sdk >>
       - persist_to_workspace:
           root: ~/build_and_publish
           paths: .
@@ -33,35 +24,38 @@ jobs:
       name: node/default
       tag: '10.16'
     steps:
-      - run: echo Publish commerce_sdk to npm << pipeline.parameters.publish_sdk >>
-      - when:
-          condition: << pipeline.parameters.publish_sdk >>
-          steps:
-            - attach_workspace:
-                at: ~/build_and_publish
-            - run: echo start publish sdk to npm
-            - run:
-                name: Create npmrc file to authenticate with npm registry.
-                command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-            - run: npm run publish << pipeline.parameters.lerna_command >>
+      - run: echo Publishing commerce_sdk to npm
+      - attach_workspace:
+          at: ~/build_and_publish
+      - run: echo start publish sdk to npm
+      - run:
+          name: Create npmrc file to authenticate with npm registry.
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
+      - run: echo publish to npm
 
 workflows:
   version: 2
   build-only:
-    unless: << pipeline.parameters.publish_sdk >>
     jobs:
       - build
   build-and-deploy:
-    when: << pipeline.parameters.publish_sdk >>
     jobs:
       - build
       - hold:
           type: approval
           requires:
             - build
+          filters:
+            branches:
+              only:
+                - /^release.*/
       - publish:
           requires:
             - hold
+          filters:
+            branches:
+              only:
+                - /^release.*/
 orbs:
   node: circleci/node@1.1
 version: 2.1
