fix linter issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ workflows:
   version: 2
   build-only:
     jobs:
-      - build
+      - build:
           filters:
             branches:
               ignore:
