--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,10 @@ jobs:
       - run: echo Publishing commerce_sdk to npm
       - attach_workspace:
           at: ~/build_and_publish
-      - run: echo start publish sdk to npm
       - run:
           name: Create npmrc file to authenticate with npm registry.
           command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-      - run: echo publish to npm
+      - run: lerna publish prerelease --yes
 
 workflows:
   version: 2
