Add npm install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,11 @@ jobs:
       - run: echo Publishing commerce_sdk to npm
       - attach_workspace:
           at: ~/build_and_publish
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+      - run: ls -lrt ~/build_and_publish
       - run:
           name: Create npmrc file to authenticate with npm registry.
           command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
