--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,9 @@ jobs:
       - run: ls -lrt ~/build_and_publish/packages
       - run: ls -lrt ~/build_and_publish/packages/generator
       - run: ls -lrt ~/build_and_publish/packages/generator/dist
+      - add_ssh_keys:
+          fingerprints:
+            - "78:6d:b4:67:eb:35:d4:a0:63:af:c2:32:f1:94:9a:5f"
       - run:
           name: Create npmrc file to authenticate with npm registry.
           command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
