Add checkout step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
       tag: '10.16'
     steps:
       - run: echo Publishing commerce_sdk to npm
+      - checkout
       - attach_workspace:
           at: ~/build_and_publish
       - run: ls -lrt ~/build_and_publish
