--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,8 @@ jobs:
       - run: ls -lrt ~/build_and_publish/packages
       - run: ls -lrt ~/build_and_publish/packages/generator
       - run: ls -lrt ~/build_and_publish/packages/generator/dist
+      - run: git config --global user.email "kalagarraj@salesforce.com"
+      - run: git config --global user.name "kalagarraj"
       - add_ssh_keys:
           fingerprints:
             - "78:6d:b4:67:eb:35:d4:a0:63:af:c2:32:f1:94:9a:5f"
