--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
-parameters:
-  publish_sdk:
-    type: boolean
-    default: false
 jobs:
   build:
+    working_directory: ~/build_and_publish
+    environment:
+      EXCHANGE_DOWNLOAD: true
     executor:
       name: node/default
       tag: '10.16'
     steps:
+      - run: echo Publish commerce_sdk to npm "$EXCHANGE_DOWNLOAD"
       - checkout
       - node/with-cache:
           steps:
@@ -17,15 +17,68 @@ jobs:
       - run: npm run test:integration
       - store_test_results:
           path: reports
-      - run: echo publish to npm << pipeline.parameters.publish_sdk >>
-      - when:
-          condition: << pipeline.parameters.publish_sdk >>
-          steps:
-            - run: echo publishing sdk to npm
-            - run:
-                name: Create npmrc file to authenticate with npm registry.
-                command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-            - run: npm run publish
+      - persist_to_workspace:
+          root: ~/build_and_publish
+          paths: .
+
+  publish:
+    working_directory: ~/build_and_publish
+    environment:
+      EXCHANGE_DOWNLOAD: true
+    executor:
+      name: node/default
+      tag: '10.16'
+    steps:
+      - run: echo Publish commerce_sdk to npm "$EXCHANGE_DOWNLOAD"
+      - checkout
+      - attach_workspace:
+          at: ~/build_and_publish
+      - run: echo -e "$GPG_KEY" | gpg --import
+      - run: gpg --list-secret-keys --keyid-format LONG
+      - run: git config --global user.email "$GITHUB_PUBLISH_EMAIL"
+      - run: git config --global user.name "$GITHUB_PUBLISH_USER"
+      - run: git config --global user.signingkey $GITHUB_GPG_SIGN_KEY
+      - run: git config --global commit.gpgsign true
+      - add_ssh_keys:
+          fingerprints:
+            - "$GITHUB_HOST_SSH_KEY"
+      - run:
+          name: Create npmrc file to authenticate with npm registry.
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
+      - run: npm run publish
+
+  workflows:
+    version: 2
+    build-only:
+      jobs:
+        - build:
+            filters:
+              branches:
+                ignore:
+                  - /^release.*/
+    build-and-deploy:
+      jobs:
+        - build:
+            filters:
+              branches:
+                only:
+                  - /^release.*/
+        - hold:
+            type: approval
+            requires:
+              - build
+            filters:
+              branches:
+                only:
+                  - /^release.*/
+        - publish:
+            requires:
+              - hold
+            filters:
+              branches:
+                only:
+                  - /^release.*/
+
 orbs:
   node: circleci/node@1.1
 version: 2.1
