Changed how we download the APIs and build the WHOLE thing

--- a/packages/generator/build-config.json
+++ b/packages/generator/build-config.json
@@ -1,6 +1,7 @@
 {
   "inputDir": "test/raml/valid/",
   "renderDir": "renderedTemplates",
-  "exchangeCategory": "CC API Family",
+  "apiFamily": "CC API Family",
+  "exchangeSearch": "category:\"CC Visibility\" = \"External\"",
   "apiConfigFile": "api-config.json"
 }
