Add comment for ssh key fingerprint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
     steps:
       - run: echo Publish commerce_sdk to npm "$EXCHANGE_DOWNLOAD"
       - checkout
+        # Add read/write ssh key's finger print in order to push the tags
       - add_ssh_keys:
           fingerprints:
             - "78:6d:b4:67:eb:35:d4:a0:63:af:c2:32:f1:94:9a:5f"
