--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -14,6 +14,7 @@
     "test:integration": "nyc --silent --check-coverage=false cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports_integration/generator.xml  --exit --require ts-node/register --colors test_integration/**/*.ts",
     "start": "node dist/index.js",
     "clean": "gulp clean",
+    "buildOperationList": "gulp buildOperationList",
     "renderTemplates": "gulp renderTemplates",
     "build": "npm run renderTemplates && tsc && eslint dist/** --quiet --fix",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
