Ka/npm publish from release branch (#62)
* Parameterized git config parameters

* Parameterize git configs

* Remove env from build only workflow

* Parameterize github and ssh variables

* Move adding ssh key to step 0

* Move adding ssh keys after checkout

* Add comment for ssh key fingerprint

Co-authored-by: monkey-jeff <jeffreypalbert@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,6 @@
-parameters:
-  publish_sdk:
-    type: boolean
-    default: false
 jobs:
   build:
+    working_directory: ~/build_only
     executor:
       name: node/default
       tag: '10.16'
@@ -17,15 +14,68 @@ jobs:
       - run: npm run test:integration
       - store_test_results:
           path: reports
-      - run: echo publish to npm << pipeline.parameters.publish_sdk >>
-      - when:
-          condition: << pipeline.parameters.publish_sdk >>
+
+  publish:
+    working_directory: ~/build_and_publish
+    executor:
+      name: node/default
+      tag: '10.16'
+    environment:
+      EXCHANGE_DOWNLOAD: true
+    steps:
+      - run: echo Publish commerce_sdk to npm "$EXCHANGE_DOWNLOAD"
+      - checkout
+        # Add read/write ssh key's finger print in order to push the tags
+      - add_ssh_keys:
+          fingerprints:
+            - "78:6d:b4:67:eb:35:d4:a0:63:af:c2:32:f1:94:9a:5f"
+      - node/with-cache:
           steps:
-            - run: echo publishing sdk to npm
-            - run:
-                name: Create npmrc file to authenticate with npm registry.
-                command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-            - run: npm run publish
+            - run: npm install
+      - run: npm run build
+      - run: echo -e "$GPG_KEY" | gpg --import
+      - run: gpg --list-secret-keys --keyid-format LONG
+      - run: git config --global user.email "$GITHUB_PUBLISH_EMAIL"
+      - run: git config --global user.name "$GITHUB_PUBLISH_USER"
+      - run: git config --global user.signingkey $GITHUB_GPG_SIGN_KEY_ID
+      - run: git config --global commit.gpgsign true
+      - run:
+          name: Create npmrc file to authenticate with npm registry.
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
+      - run: npm run publish
+
+workflows:
+  version: 2
+  build-only:
+    jobs:
+      - build:
+          filters:
+            branches:
+              ignore:
+                - /^release.*/
+  build-and-deploy:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only:
+                - /^release.*/
+      - hold:
+          type: approval
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - /^release.*/
+      - publish:
+          requires:
+            - hold
+          filters:
+            branches:
+              only:
+                - /^release.*/
+
 orbs:
   node: circleci/node@1.1
 version: 2.1
