--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,14 +47,14 @@ jobs:
 
 workflows:
   version: 2
-  build-only:
+  build-and-test:
     jobs:
       - build:
           filters:
             branches:
               ignore:
                 - /^release.*/
-  build-and-deploy:
+  build-test-and-deploy:
     jobs:
       - build:
           filters:
