--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
       - run: npm run publish
       - run: sudo npm install -g @octokit/rest
-      - run: node .circleci/create_pr.js $GITHUB_OAUTH_TOKEN_OWNER $GITHUB_OAUTH_TOKEN $CIRCLE_BRANCH "Publish to npm" "Published commerce_sdk to npm"
+      - run: node .circleci/create_pr.js
 
 workflows:
   version: 2
