Update to build from multiple searches

--- a/packages/generator/build-config.json
+++ b/packages/generator/build-config.json
@@ -2,6 +2,6 @@
   "inputDir": "test/raml/valid/",
   "renderDir": "renderedTemplates",
   "apiFamily": "CC API Family",
-  "exchangeSearch": "category:\"CC Visibility\" = \"External\"",
+  "exchangeSearches": ["category:\"CC Visibility\" = \"External\"", "\"einstein-api-internal\""],
   "apiConfigFile": "api-config.json"
 }
