Updated to iterate and merge multiple search results

--- a/packages/generator/build-config.json
+++ b/packages/generator/build-config.json
@@ -2,6 +2,9 @@
   "inputDir": "test/raml/valid/",
   "renderDir": "renderedTemplates",
   "apiFamily": "CC API Family",
-  "exchangeSearches": ["category:\"CC Visibility\" = \"External\"", "\"einstein-api-internal\""],
+  "exchangeSearches": {
+    "mercury": "category:\"CC Visibility\" = \"External\"",
+    "einstein": "\"einstein-api-internal\""
+  },
   "apiConfigFile": "api-config.json"
 }
