--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -111,11 +111,11 @@
     "@types/gulp-debug": "^2.0.31",
     "chai": "^4.2.0",
     "cross-env": "^6.0.3",
-    "nyc": "^14.1.1",
-    "unzipper": "^0.10.5",
     "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
-    "gulp-typescript": "^5.0.1"
+    "gulp-typescript": "^5.0.1",
+    "nyc": "^14.1.1",
+    "unzipper": "^0.10.5"
   },
   "dependencies": {
     "@commerce-apps/core": "^0.0.16-alpha.0",
